<resources>
    <string name="app_name" translatable="false">Tachiyomi</string>
    <string name="name">Name</string>
    <string name="label_settings">Settings</string>
    <string name="label_download_queue">Download queue</string>
    <string name="label_library">My library</string>
    <string name="label_recent_manga">Reading</string>
    <string name="label_catalogues">Catalogues</string>
    <string name="label_recent_updates">Library updates</string>
    <string name="label_latest_updates">Latest updates</string>
    <string name="label_categories">Categories</string>
    <string name="label_selected">Selected: %1$d</string>
    <string name="label_backup">Backup</string>
    <string name="label_updates">Updates</string>
    <string name="action_settings">Settings</string>
    <string name="action_filter">Filter</string>
    <string name="action_filter_downloaded">Downloaded</string>
    <string name="action_filter_bookmarked">Bookmarked</string>
    <string name="action_filter_unread">Unread</string>
    <string name="action_filter_read">Read</string>
    <string name="action_filter_empty">Remove filter</string>
    <string name="action_sort_alpha">Alphabetically</string>
    <string name="action_sort_last_read">Last read</string>
    <string name="action_sort_last_updated">Last updated</string>
    <string name="action_search">Search</string>
    <string name="action_select_all">Select all</string>
    <string name="action_mark_as_read">Mark as read</string>
    <string name="action_mark_as_unread">Mark as unread</string>
    <string name="action_mark_previous_as_read">Mark previous as read</string>
    <string name="action_download">Download</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="action_remove_bookmark">Remove bookmark</string>
    <string name="action_delete">Delete</string>
    <string name="action_update">Update</string>
    <string name="action_update_library">Update library</string>
    <string name="action_edit">Edit</string>
    <string name="action_add">Add</string>
    <string name="action_add_category">Add category</string>
    <string name="action_edit_categories">Edit categories</string>
    <string name="action_rename_category">Rename category</string>
    <string name="action_move_category">Move to categories</string>
    <string name="action_edit_cover">Edit the cover picture</string>
    <string name="action_sort_up">Sort up</string>
    <string name="action_sort_down">Sort down</string>
    <string name="action_show_unread">Unread</string>
    <string name="action_show_downloaded">Downloaded</string>
    <string name="action_next_unread">Next unread</string>
    <string name="action_start">Start</string>
    <string name="action_stop">Stop</string>
    <string name="action_pause">Pause</string>
    <string name="action_clear">Clear</string>
    <string name="action_previous_chapter">Previous chapter</string>
    <string name="action_next_chapter">Next chapter</string>
    <string name="action_retry">Retry</string>
    <string name="action_remove">Remove</string>
    <string name="action_resume">Resume</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="action_add_to_home_screen">Add to home screen</string>
    <string name="action_display_mode">Change display mode</string>
    <string name="action_display">Display</string>
    <string name="action_display_grid">Grid</string>
    <string name="action_display_list">List</string>
    <string name="action_set_filter">Set filter</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_sort">Sort</string>
    <string name="action_install">Install</string>
    <string name="action_share">Share</string>
    <string name="action_save">Save</string>
    <string name="action_reset">Reset</string>
    <string name="action_undo">Undo</string>
    <string name="deleting">Deleting…</string>
    <string name="loading">Loading…</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_reader">Reader</string>
    <string name="pref_category_downloads">Downloads</string>
    <string name="pref_category_sources">Sources</string>
    <string name="pref_category_tracking">Tracking</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_category_about">About</string>
    <string name="pref_library_columns">Library manga per row</string>
    <string name="portrait">Portrait</string>
    <string name="landscape">Landscape</string>
    <string name="default_columns">Default</string>
    <string name="pref_library_update_interval">Library update frequency</string>
    <string name="update_never">Manual</string>
    <string name="update_1hour">Hourly</string>
    <string name="update_2hour">Every 2 hours</string>
    <string name="update_3hour">Every 3 hours</string>
    <string name="update_6hour">Every 6 hours</string>
    <string name="update_12hour">Every 12 hours</string>
    <string name="update_24hour">Daily</string>
    <string name="update_48hour">Every 2 days</string>
    <string name="pref_library_update_categories">Categories to include in global update</string>
    <string name="all">All</string>
    <string name="pref_library_update_restriction">Library update restrictions</string>
    <string name="pref_library_update_restriction_summary">Update only when the conditions are met</string>
    <string name="wifi">Wi-Fi</string>
    <string name="charging">Charging</string>
    <string name="pref_update_only_non_completed">Only update ongoing manga</string>
    <string name="pref_auto_update_manga_sync">Sync chapters after reading</string>
    <string name="pref_ask_update_manga_sync">Confirm before updating</string>
    <string name="pref_theme">Application theme</string>
    <string name="light_theme">Main theme</string>
    <string name="dark_theme">Dark theme</string>
    <string name="pref_start_screen">Start screen</string>
    <string name="pref_language">Language</string>
    <string name="system_default">System default</string>
    <string name="pref_fullscreen">Fullscreen</string>
    <string name="pref_lock_orientation">Lock orientation</string>
    <string name="pref_page_transitions">Page transitions</string>
    <string name="pref_show_page_number">Show page number</string>
    <string name="pref_crop_borders">Crop borders</string>
    <string name="pref_custom_brightness">Use custom brightness</string>
    <string name="pref_custom_color_filter">Use custom color filter</string>
    <string name="pref_keep_screen_on">Keep screen on</string>
    <string name="pref_reader_navigation">Navigation</string>
    <string name="pref_read_with_volume_keys">Volume keys</string>
    <string name="pref_read_with_tapping">Tapping</string>
    <string name="pref_reader_theme">Background color</string>
    <string name="white_background">White</string>
    <string name="black_background">Black</string>
    <string name="pref_viewer_type">Default viewer</string>
    <string name="default_viewer">Default</string>
    <string name="left_to_right_viewer">Left to right</string>
    <string name="right_to_left_viewer">Right to left</string>
    <string name="vertical_viewer">Vertical</string>
    <string name="webtoon_viewer">Webtoon</string>
    <string name="pref_image_decoder">Image decoder</string>
    <string name="pref_image_scale_type">Scale type</string>
    <string name="scale_type_fit_screen">Fit screen</string>
    <string name="scale_type_stretch">Stretch</string>
    <string name="scale_type_fit_width">Fit width</string>
    <string name="scale_type_fit_height">Fit height</string>
    <string name="scale_type_original_size">Original size</string>
    <string name="scale_type_smart_fit">Smart fit</string>
    <string name="pref_zoom_start">Zoom start position</string>
    <string name="zoom_start_automatic">Automatic</string>
    <string name="zoom_start_left">Left</string>
    <string name="zoom_start_right">Right</string>
    <string name="zoom_start_center">Center</string>
    <string name="pref_rotation_type">Rotation</string>
    <string name="rotation_free">Free</string>
    <string name="rotation_lock">Lock</string>
    <string name="rotation_force_portrait">Force portrait</string>
    <string name="rotation_force_landscape">Force landscape</string>
    <string name="color_filter_r_value">R</string>
    <string name="color_filter_g_value">G</string>
    <string name="color_filter_b_value">B</string>
    <string name="color_filter_a_value">A</string>
    <string name="pref_download_directory">Downloads directory</string>
    <string name="pref_download_slots">Simultaneous downloads</string>
    <string name="pref_download_only_over_wifi">Only download over Wi-Fi</string>
    <string name="pref_remove_after_marked_as_read">Remove when marked as read</string>
    <string name="pref_remove_after_read">Remove after read</string>
    <string name="custom_dir">Custom directory</string>
    <string name="disabled">Disabled</string>
    <string name="last_read_chapter">Last read chapter</string>
    <string name="second_to_last">Second to last chapter</string>
    <string name="third_to_last">Third to last chapter</string>
    <string name="fourth_to_last">Fourth to last chapter</string>
    <string name="fifth_to_last">Fifth to last chapter</string>
    <string name="pref_download_new">Download new chapters</string>
    <string name="services">Services</string>
    <string name="pref_clear_chapter_cache">Clear chapter cache</string>
    <string name="used_cache">Used: %1$s</string>
    <string name="cache_deleted">Cache cleared. %1$d files have been deleted</string>
    <string name="cache_delete_error">An error occurred while clearing cache</string>
    <string name="pref_clear_cookies">Clear cookies</string>
    <string name="cookies_cleared">Cookies cleared</string>
    <string name="choices_reset">Dialog choices reset</string>
    <string name="pref_clear_database">Clear database</string>
    <string name="pref_clear_database_summary">Delete manga and chapters that are not in your library</string>
    <string name="clear_database_confirmation">Are you sure? Read chapters and progress of non-library manga will be lost</string>
    <string name="clear_database_completed">Entries deleted</string>
    <string name="pref_refresh_library_metadata">Refresh library metadata</string>
    <string name="pref_refresh_library_metadata_summary">Updates covers, genres, description and manga status information</string>
    <string name="version">Version</string>
    <string name="build_time">Build time</string>
    <string name="pref_enable_automatic_updates">Check for updates</string>
    <string name="pref_enable_automatic_updates_summary">Automatically check for application updates</string>
    <string name="pref_enable_acra">Send crash reports</string>
    <string name="pref_acra_summary">Helps fix any bugs. No sensitive data will be sent</string>
    <string name="login_title">Login for %1$s</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="show_password">Show password</string>
    <string name="login">Login</string>
    <string name="login_success">Login successful</string>
    <string name="invalid_login">Login error</string>
    <string name="unknown_error">Unknown error</string>
    <string name="library_search_hint">Title or author…</string>
    <string name="updating_category">Updating category</string>
    <string name="confirm_delete_manga">Are you sure you want to remove selected manga?</string>
    <string name="also_delete_chapters">Also delete downloaded chapters</string>
    <string name="source_requires_login">This source requires you to log in</string>
    <string name="select_source">Select a source</string>
    <string name="no_valid_sources">Please enable at least one valid source</string>
</resources>