<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/group_feature"
           android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_recent_updates"
            android:icon="@drawable/ic_update_black_24dp"
            android:title="@string/label_recent_updates" />
        <item
            android:id="@+id/nav_drawer_latest_updates"
            android:icon="@drawable/ic_watch_later_black_24dp"
            android:title="@string/label_latest_updates" />
        <item
            android:id="@+id/nav_drawer_downloads"
            android:icon="@drawable/ic_file_download_black_24dp"
            android:title="@string/label_download_queue"
            android:checkable="false" />
        <item
            android:id="@+id/unchecked_nav_item"
            android:visible="false"
            android:enabled="false"
            android:title=""/>
    </group>
    <group android:id="@+id/group_settings"
           android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drawer_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/label_settings"
            android:checkable="false" />
        <item
            android:id="@+id/nav_drawer_backup"
            android:icon="@drawable/ic_backup_black_24dp"
            android:title="@string/label_backup" />
    </group>
</menu>
